--- a/proximitymap-bootstrap.css
+++ b/proximitymap-bootstrap.css
@@ -1,6 +1,6 @@
 /* Move down content because we have a fixed navbar that is 50px tall */
 body {
-  padding-top: 80px;
+  padding-top: 100px;
   padding-bottom: 20px;
 }
 
@@ -27,7 +27,7 @@ body {
 /* Creating Material Box look */
 .material-box {
 	background-color: #FFFFFF;
-	padding-top: 30px;
+	padding-top: 20px;
 	padding-bottom: 30px;
 	padding-left: 20px;
 	padding-right: 20px;
@@ -46,6 +46,54 @@ body {
 
 /* Generic changes to make it fit material design-lite */
 h1, h2, h3, h4, h5 { font-family: 'Roboto', sans-serif; font-weight: 400; }
-p { font-family: 'Roboto', sans-serif; font-weight: 300; }
+h2 { font-size: 19px;}
+p { font-family: 'Roboto', sans-serif; font-weight: 300; font-size: 13px; }
 body { background-color: #ececec}
 
+/* Zones */
+.zone {
+	border: dashed 1px;
+	width: 100%;
+	height: 0;
+	padding-bottom: 100%;
+	border-radius: 50%;
+}
+.zone:after {
+	width: 75%;
+	height: 0;
+	border: dashed 1px #E0E0E0;
+	border-radius: 50%;
+	content: '';
+	display: block;
+	padding-bottom: 75%;
+	margin-left: 12.5%;
+	margin-top: 12.5%;
+}
+
+/* Zones centre icon and animation */
+.zone .centre {
+	display: block;
+	overflow: hidden;
+	position: absolute;
+	top: 50%;
+	left: 50%;
+	margin: -14px 0 0 -8px;
+}
+.pulse {
+	-webkit-animation: pulse 5s ease-in infinite;
+}
+
+@-webkit-keyframes "pulse" {
+ 0% {
+    color: rgba(165, 25, 25, 0.6);
+ }
+
+ 50% {
+    color: rgba(255,0,0,0.8);
+ }
+
+ 100% {
+    color: rgba(165, 25, 25, 0.6);
+ }
+
+}
