Write story in dom, inc livestamp.js & moment.js
Writing to dom in a pretty basic way, using moment.js and livestamp.js
to deal with insert times

--- a/proximitymap-bootstrap.css
+++ b/proximitymap-bootstrap.css
@@ -47,7 +47,7 @@ body {
 /* Generic changes to make it fit material design-lite */
 h1, h2, h3, h4, h5 { font-family: 'Roboto', sans-serif; font-weight: 400; }
 h2 { font-size: 19px;}
-p { font-family: 'Roboto', sans-serif; font-weight: 300; font-size: 13px; }
+p, li, ul { font-family: 'Roboto', sans-serif; font-weight: 300; font-size: 13px; }
 body { background-color: #ececec}
 
 /* Waiting Zone */
