--- a/proximitymap-bootstrap.css
+++ b/proximitymap-bootstrap.css
@@ -50,6 +50,12 @@ h2 { font-size: 19px;}
 p, li, ul { font-family: 'Roboto', sans-serif; font-weight: 300; font-size: 13px; }
 body { background-color: #ececec}
 
+/* Story, make it wrap arround */
+.story {
+	max-height: 60px;
+	overflow-x: auto;
+}
+
 /* Waiting Zone */
 .waiting-zone {
 	padding-bottom: 20px;
